[gd_scene load_steps=22 format=3 uid="uid://e35y7vheovke"]

[ext_resource type="Script" path="res://scripts/set_delivery_route.gd" id="1_hfyuy"]
[ext_resource type="Script" path="res://scripts/pickup_area.gd" id="2_88ck3"]
[ext_resource type="PackedScene" uid="uid://bsx6o3mp2xhbv" path="res://scenes/player.tscn" id="2_i4pq0"]
[ext_resource type="Texture2D" uid="uid://cjfkm0slq8t8i" path="res://assets/spritesheet_spaceships.png" id="3_n84p4"]
[ext_resource type="Script" path="res://scripts/box.gd" id="3_qh0sp"]
[ext_resource type="Texture2D" uid="uid://4nixrmyc4bnj" path="res://assets/spritesheet_robotsSide.png" id="3_vp15d"]
[ext_resource type="Script" path="res://scripts/recipient.gd" id="5_5a40y"]
[ext_resource type="Texture2D" uid="uid://d3er8qxfnx4n7" path="res://assets/Tiles/tile_0103.png" id="5_qn2xe"]
[ext_resource type="Texture2D" uid="uid://dhjban0i3hi3b" path="res://assets/spritesheet_lasers.png" id="7_1c4jb"]
[ext_resource type="Texture2D" uid="uid://6lxrnb1qglxs" path="res://assets/Tiles/tile_0104.png" id="7_hxoyp"]
[ext_resource type="Texture2D" uid="uid://bico2unn7ehw8" path="res://assets/Tiles/tile_0106.png" id="7_l2bec"]
[ext_resource type="Texture2D" uid="uid://b48sg8h0bliq7" path="res://assets/Tiles/tile_0105.png" id="8_rr6gd"]
[ext_resource type="Texture2D" uid="uid://c8kv336l5hdts" path="res://assets/Tiles/tile_0108.png" id="9_n8wvy"]
[ext_resource type="TileSet" uid="uid://dy0v2jmqmqw7u" path="res://assets/tilemap.tres" id="14_ybxsp"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="15_0qu2a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aov6t"]
size = Vector2(1172, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_so41o"]
size = Vector2(54, 555)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gye55"]
size = Vector2(91, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t71e8"]
size = Vector2(61, 60)

[sub_resource type="SphereMesh" id="SphereMesh_3bv5l"]
radius = 40.0
height = 50.0

[sub_resource type="PrismMesh" id="PrismMesh_2mcuo"]
size = Vector3(20, 20, 0)

[node name="DeliveryGuy" type="Node2D"]
script = ExtResource("1_hfyuy")

[node name="BackgroundColor" type="ColorRect" parent="."]
offset_left = -1.0
offset_right = 1149.0
offset_bottom = 656.0
color = Color(0.678431, 0.847059, 0.901961, 1)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(0, -41)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(571, 610)
shape = SubResource("RectangleShape2D_aov6t")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground"]
position = Vector2(-29, 334)
shape = SubResource("RectangleShape2D_so41o")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ground"]
position = Vector2(1171, 324)
shape = SubResource("RectangleShape2D_so41o")

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2(83, 524)
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("2_88ck3")

[node name="Sprite2D" type="Sprite2D" parent="PickupArea"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_vp15d")
region_enabled = true
region_rect = Rect2(-0.333344, 325, 184.667, 152)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_gye55")

[node name="PlaceToDeliver" type="Node2D" parent="."]
position = Vector2(437, 405)

[node name="Recipient" type="Area2D" parent="PlaceToDeliver"]
position = Vector2(0, 33)
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("5_5a40y")

[node name="Sprite2D2" type="Sprite2D" parent="PlaceToDeliver/Recipient"]
position = Vector2(0, -33)
scale = Vector2(1, 3.12)
texture = ExtResource("7_1c4jb")
region_enabled = true
region_rect = Rect2(563.556, -0.665668, 67.5555, 100.444)

[node name="Sprite2D" type="Sprite2D" parent="PlaceToDeliver/Recipient"]
position = Vector2(0, -198)
texture = ExtResource("3_n84p4")
region_enabled = true
region_rect = Rect2(124.224, 144.666, 123.555, 121.669)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlaceToDeliver/Recipient"]
position = Vector2(0.5, 88)
shape = SubResource("RectangleShape2D_t71e8")

[node name="Label" type="Label" parent="PlaceToDeliver/Recipient"]
offset_left = 38.0
offset_top = -61.0
offset_right = 101.0
offset_bottom = -38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Address"

[node name="DeliveredPos" type="Node2D" parent="PlaceToDeliver/Recipient"]
position = Vector2(-2, -120)

[node name="HintBackground" type="MeshInstance2D" parent="PlaceToDeliver/Recipient"]
position = Vector2(80, -239)
mesh = SubResource("SphereMesh_3bv5l")

[node name="MeshInstance2D" type="MeshInstance2D" parent="PlaceToDeliver/Recipient/HintBackground"]
position = Vector2(-33, 16)
rotation = 0.821961
mesh = SubResource("PrismMesh_2mcuo")

[node name="Hint" type="Sprite2D" parent="PlaceToDeliver/Recipient"]
position = Vector2(80, -243)
scale = Vector2(2, 2)
texture = ExtResource("7_l2bec")

[node name="Recipient2" type="Area2D" parent="PlaceToDeliver"]
position = Vector2(196, 33)
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("5_5a40y")

[node name="Sprite2D2" type="Sprite2D" parent="PlaceToDeliver/Recipient2"]
position = Vector2(0, -33)
scale = Vector2(1, 3.12)
texture = ExtResource("7_1c4jb")
region_enabled = true
region_rect = Rect2(563.556, -0.665668, 67.5555, 100.444)

[node name="Sprite2D" type="Sprite2D" parent="PlaceToDeliver/Recipient2"]
position = Vector2(0, -198)
texture = ExtResource("3_n84p4")
region_enabled = true
region_rect = Rect2(0.998322, -0.328662, 122.668, 106.667)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlaceToDeliver/Recipient2"]
position = Vector2(0.5, 88)
shape = SubResource("RectangleShape2D_t71e8")

[node name="Label" type="Label" parent="PlaceToDeliver/Recipient2"]
offset_left = 34.0
offset_top = -61.0
offset_right = 97.0
offset_bottom = -38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Address"

[node name="DeliveredPos" type="Node2D" parent="PlaceToDeliver/Recipient2"]
position = Vector2(-2, -120)

[node name="HintBackground" type="MeshInstance2D" parent="PlaceToDeliver/Recipient2"]
position = Vector2(80, -239)
mesh = SubResource("SphereMesh_3bv5l")

[node name="MeshInstance2D" type="MeshInstance2D" parent="PlaceToDeliver/Recipient2/HintBackground"]
position = Vector2(-33, 16)
rotation = 0.821961
mesh = SubResource("PrismMesh_2mcuo")

[node name="Hint" type="Sprite2D" parent="PlaceToDeliver/Recipient2"]
position = Vector2(80, -243)
scale = Vector2(2, 2)
texture = ExtResource("7_l2bec")

[node name="Recipient3" type="Area2D" parent="PlaceToDeliver"]
position = Vector2(387, 33)
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("5_5a40y")

[node name="Sprite2D2" type="Sprite2D" parent="PlaceToDeliver/Recipient3"]
position = Vector2(0, -33)
scale = Vector2(1, 3.12)
texture = ExtResource("7_1c4jb")
region_enabled = true
region_rect = Rect2(563.556, -0.665668, 67.5555, 100.444)

[node name="Sprite2D" type="Sprite2D" parent="PlaceToDeliver/Recipient3"]
position = Vector2(0, -198)
texture = ExtResource("3_n84p4")
region_enabled = true
region_rect = Rect2(0, 294, 123.74, 127)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlaceToDeliver/Recipient3"]
position = Vector2(0.5, 88)
shape = SubResource("RectangleShape2D_t71e8")

[node name="Label" type="Label" parent="PlaceToDeliver/Recipient3"]
offset_left = 34.0
offset_top = -61.0
offset_right = 97.0
offset_bottom = -38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Address"

[node name="DeliveredPos" type="Node2D" parent="PlaceToDeliver/Recipient3"]
position = Vector2(-2, -120)

[node name="HintBackground" type="MeshInstance2D" parent="PlaceToDeliver/Recipient3"]
position = Vector2(80, -239)
mesh = SubResource("SphereMesh_3bv5l")

[node name="MeshInstance2D" type="MeshInstance2D" parent="PlaceToDeliver/Recipient3/HintBackground"]
position = Vector2(-33, 16)
rotation = 0.821961
mesh = SubResource("PrismMesh_2mcuo")

[node name="Hint" type="Sprite2D" parent="PlaceToDeliver/Recipient3"]
position = Vector2(80, -243)
scale = Vector2(2, 2)
texture = ExtResource("7_l2bec")

[node name="Recipient4" type="Area2D" parent="PlaceToDeliver"]
position = Vector2(578, 33)
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("5_5a40y")

[node name="Sprite2D2" type="Sprite2D" parent="PlaceToDeliver/Recipient4"]
position = Vector2(0, -33)
scale = Vector2(1, 3.12)
texture = ExtResource("7_1c4jb")
region_enabled = true
region_rect = Rect2(563.556, -0.665668, 67.5555, 100.444)

[node name="Sprite2D" type="Sprite2D" parent="PlaceToDeliver/Recipient4"]
position = Vector2(0, -198)
texture = ExtResource("3_n84p4")
region_enabled = true
region_rect = Rect2(372.381, 0.668444, 124.398, 120.493)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlaceToDeliver/Recipient4"]
position = Vector2(0.5, 88)
shape = SubResource("RectangleShape2D_t71e8")

[node name="Label" type="Label" parent="PlaceToDeliver/Recipient4"]
offset_left = 34.0
offset_top = -61.0
offset_right = 97.0
offset_bottom = -38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Address"

[node name="DeliveredPos" type="Node2D" parent="PlaceToDeliver/Recipient4"]
position = Vector2(-2, -120)

[node name="HintBackground" type="MeshInstance2D" parent="PlaceToDeliver/Recipient4"]
position = Vector2(80, -239)
mesh = SubResource("SphereMesh_3bv5l")

[node name="MeshInstance2D" type="MeshInstance2D" parent="PlaceToDeliver/Recipient4/HintBackground"]
position = Vector2(-33, 16)
rotation = 0.821961
mesh = SubResource("PrismMesh_2mcuo")

[node name="Hint" type="Sprite2D" parent="PlaceToDeliver/Recipient4"]
position = Vector2(80, -243)
scale = Vector2(2, 2)
texture = ExtResource("7_l2bec")

[node name="Packages" type="Node2D" parent="."]
position = Vector2(80, 461)

[node name="Box2" type="Sprite2D" parent="Packages"]
position = Vector2(24, 6)
scale = Vector2(3, 3)
texture = ExtResource("7_hxoyp")
script = ExtResource("3_qh0sp")

[node name="Box4" type="Sprite2D" parent="Packages"]
position = Vector2(-9, 0)
scale = Vector2(3, 3)
texture = ExtResource("9_n8wvy")
script = ExtResource("3_qh0sp")

[node name="Box3" type="Sprite2D" parent="Packages"]
position = Vector2(17, 0)
scale = Vector2(3, 3)
texture = ExtResource("8_rr6gd")
script = ExtResource("3_qh0sp")

[node name="Box" type="Sprite2D" parent="Packages"]
position = Vector2(-20, 6)
scale = Vector2(3, 3)
texture = ExtResource("5_qn2xe")
script = ExtResource("3_qh0sp")

[node name="Player" parent="." instance=ExtResource("2_i4pq0")]
position = Vector2(254, 529)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("14_ybxsp")
format = 2
layer_0/tile_data = PackedInt32Array(2031617, 140, 0, 2031618, 140, 0, 2031619, 140, 0, 2031620, 140, 0, 2031621, 140, 0, 2031622, 140, 0, 2031623, 140, 0, 2031624, 140, 0, 2031625, 140, 0, 2031626, 140, 0, 2031627, 140, 0, 2031628, 140, 0, 2031629, 140, 0, 2031630, 140, 0, 2031631, 140, 0, 2031632, 140, 0, 2031633, 140, 0, 2031634, 140, 0, 2031635, 140, 0, 2031636, 140, 0, 2031637, 140, 0, 2031638, 140, 0, 2031639, 140, 0, 2031640, 140, 0, 2031641, 140, 0, 2031642, 140, 0, 2031643, 140, 0, 2031644, 140, 0, 2031645, 140, 0, 2031646, 140, 0, 2031647, 140, 0, 2031648, 140, 0, 2031649, 140, 0, 2031650, 140, 0, 2031651, 140, 0, 2031652, 140, 0, 2031653, 140, 0, 2031654, 140, 0, 2031655, 140, 0, 2031656, 140, 0, 2031657, 140, 0, 2031658, 140, 0, 2031659, 140, 0, 2031660, 140, 0, 2031661, 140, 0, 2031662, 140, 0, 2031663, 140, 0, 2031664, 140, 0, 2031665, 140, 0, 2031666, 140, 0, 2031667, 140, 0, 2031668, 140, 0, 2031669, 140, 0, 2031670, 140, 0, 2031671, 140, 0, 2031672, 140, 0, 2031673, 140, 0, 2031674, 140, 0, 2031675, 140, 0, 2031676, 140, 0, 2031677, 140, 0, 2031678, 140, 0, 2031616, 141, 0, 2031679, 141, 268435456, 2228224, 146, 0, 2228225, 145, 0, 2228226, 145, 0, 2228227, 145, 0, 2228228, 145, 0, 2228229, 145, 0, 2228230, 145, 0, 2228231, 145, 0, 2228232, 145, 0, 2228233, 145, 0, 2228234, 145, 0, 2228235, 145, 0, 2228236, 145, 0, 2228237, 145, 0, 2228238, 145, 0, 2228239, 145, 0, 2228240, 145, 0, 2228241, 145, 0, 2228242, 145, 0, 2228243, 145, 0, 2228244, 145, 0, 2228245, 145, 0, 2228246, 145, 0, 2228247, 145, 0, 2228248, 145, 0, 2228249, 145, 0, 2228250, 145, 0, 2228251, 145, 0, 2228252, 145, 0, 2228253, 145, 0, 2228254, 145, 0, 2228255, 145, 0, 2228256, 145, 0, 2228257, 145, 0, 2228258, 145, 0, 2228259, 145, 0, 2228260, 145, 0, 2228261, 145, 0, 2228262, 145, 0, 2228263, 145, 0, 2228264, 145, 0, 2228265, 145, 0, 2228266, 145, 0, 2228267, 145, 0, 2228268, 145, 0, 2228269, 145, 0, 2228270, 145, 0, 2228271, 145, 0, 2228272, 145, 0, 2228273, 145, 0, 2228274, 145, 0, 2228275, 145, 0, 2228276, 145, 0, 2228277, 145, 0, 2228278, 145, 0, 2228279, 145, 0, 2228280, 145, 0, 2228281, 145, 0, 2228282, 145, 0, 2228283, 145, 0, 2228284, 145, 0, 2228285, 145, 0, 2228286, 145, 0, 2228287, 146, 268435456, 2293760, 146, 0, 2359296, 147, 0, 2293761, 145, 0, 2359297, 143, 0, 2293762, 145, 0, 2359298, 143, 0, 2293763, 145, 0, 2359299, 143, 0, 2293764, 145, 0, 2359300, 143, 0, 2293765, 145, 0, 2359301, 143, 0, 2293766, 145, 0, 2359302, 143, 0, 2293767, 145, 0, 2359303, 143, 0, 2293768, 145, 0, 2359304, 143, 0, 2293769, 145, 0, 2359305, 143, 0, 2293770, 145, 0, 2359306, 143, 0, 2293771, 145, 0, 2359307, 143, 0, 2293772, 145, 0, 2359308, 143, 0, 2293773, 145, 0, 2359309, 143, 0, 2293774, 145, 0, 2359310, 143, 0, 2293775, 145, 0, 2359311, 143, 0, 2293776, 145, 0, 2359312, 143, 0, 2293777, 145, 0, 2359313, 143, 0, 2293778, 145, 0, 2359314, 143, 0, 2293779, 145, 0, 2359315, 143, 0, 2293780, 145, 0, 2359316, 143, 0, 2293781, 145, 0, 2359317, 143, 0, 2293782, 145, 0, 2359318, 143, 0, 2293783, 145, 0, 2359319, 143, 0, 2293784, 145, 0, 2359320, 143, 0, 2293785, 145, 0, 2359321, 143, 0, 2293786, 145, 0, 2359322, 143, 0, 2293787, 145, 0, 2359323, 143, 0, 2293788, 145, 0, 2359324, 143, 0, 2293789, 145, 0, 2359325, 143, 0, 2293790, 145, 0, 2359326, 143, 0, 2293791, 145, 0, 2359327, 143, 0, 2293792, 145, 0, 2359328, 143, 0, 2293793, 145, 0, 2359329, 143, 0, 2293794, 145, 0, 2359330, 143, 0, 2293795, 145, 0, 2359331, 143, 0, 2293796, 145, 0, 2359332, 143, 0, 2293797, 145, 0, 2359333, 143, 0, 2293798, 145, 0, 2359334, 143, 0, 2293799, 145, 0, 2359335, 143, 0, 2293800, 145, 0, 2359336, 143, 0, 2293801, 145, 0, 2359337, 143, 0, 2293802, 145, 0, 2359338, 143, 0, 2293803, 145, 0, 2359339, 143, 0, 2293804, 145, 0, 2359340, 143, 0, 2293805, 145, 0, 2359341, 143, 0, 2293806, 145, 0, 2359342, 143, 0, 2293807, 145, 0, 2359343, 143, 0, 2293808, 145, 0, 2359344, 143, 0, 2293809, 145, 0, 2359345, 143, 0, 2293810, 145, 0, 2359346, 143, 0, 2293811, 145, 0, 2359347, 143, 0, 2293812, 145, 0, 2359348, 143, 0, 2293813, 145, 0, 2359349, 143, 0, 2293814, 145, 0, 2359350, 143, 0, 2293815, 145, 0, 2359351, 143, 0, 2293816, 145, 0, 2359352, 143, 0, 2293817, 145, 0, 2359353, 143, 0, 2293818, 145, 0, 2359354, 143, 0, 2293819, 145, 0, 2359355, 143, 0, 2293820, 145, 0, 2359356, 143, 0, 2293821, 145, 0, 2359357, 143, 0, 2293822, 145, 0, 2359358, 143, 0, 2293823, 146, 268435456, 2359359, 147, 268435456, 2097152, 144, 0, 2162688, 144, 0, 2097153, 142, 0, 2162689, 142, 0, 2097154, 142, 0, 2162690, 142, 0, 2097155, 142, 0, 2162691, 142, 0, 2097156, 142, 0, 2162692, 142, 0, 2097157, 142, 0, 2162693, 142, 0, 2097158, 142, 0, 2162694, 142, 0, 2097159, 142, 0, 2162695, 142, 0, 2097160, 142, 0, 2162696, 142, 0, 2097161, 142, 0, 2162697, 142, 0, 2097162, 142, 0, 2162698, 142, 0, 2097163, 142, 0, 2162699, 142, 0, 2097164, 142, 0, 2162700, 142, 0, 2097165, 142, 0, 2162701, 142, 0, 2097166, 142, 0, 2162702, 142, 0, 2097167, 142, 0, 2162703, 142, 0, 2097168, 142, 0, 2162704, 142, 0, 2097169, 142, 0, 2162705, 142, 0, 2097170, 142, 0, 2162706, 142, 0, 2097171, 142, 0, 2162707, 142, 0, 2097172, 142, 0, 2162708, 142, 0, 2097173, 142, 0, 2162709, 142, 0, 2097174, 142, 0, 2162710, 142, 0, 2097175, 142, 0, 2162711, 142, 0, 2097176, 142, 0, 2162712, 142, 0, 2097177, 142, 0, 2162713, 142, 0, 2097178, 142, 0, 2162714, 142, 0, 2097179, 142, 0, 2162715, 142, 0, 2097180, 142, 0, 2162716, 142, 0, 2097181, 142, 0, 2162717, 142, 0, 2097182, 142, 0, 2162718, 142, 0, 2097183, 142, 0, 2162719, 142, 0, 2097184, 142, 0, 2162720, 142, 0, 2097185, 142, 0, 2162721, 142, 0, 2097186, 142, 0, 2162722, 142, 0, 2097187, 142, 0, 2162723, 142, 0, 2097188, 142, 0, 2162724, 142, 0, 2097189, 142, 0, 2162725, 142, 0, 2097190, 142, 0, 2162726, 142, 0, 2097191, 142, 0, 2162727, 142, 0, 2097192, 142, 0, 2162728, 142, 0, 2097193, 142, 0, 2162729, 142, 0, 2097194, 142, 0, 2162730, 142, 0, 2097195, 142, 0, 2162731, 142, 0, 2097196, 142, 0, 2162732, 142, 0, 2097197, 142, 0, 2162733, 142, 0, 2097198, 142, 0, 2162734, 142, 0, 2097199, 142, 0, 2162735, 142, 0, 2097200, 142, 0, 2162736, 142, 0, 2097201, 142, 0, 2162737, 142, 0, 2097202, 142, 0, 2162738, 142, 0, 2097203, 142, 0, 2162739, 142, 0, 2097204, 142, 0, 2162740, 142, 0, 2097205, 142, 0, 2162741, 142, 0, 2097206, 142, 0, 2162742, 142, 0, 2097207, 142, 0, 2162743, 142, 0, 2097208, 142, 0, 2162744, 142, 0, 2097209, 142, 0, 2162745, 142, 0, 2097210, 142, 0, 2162746, 142, 0, 2097211, 142, 0, 2162747, 142, 0, 2097212, 142, 0, 2162748, 142, 0, 2097213, 142, 0, 2162749, 142, 0, 2097214, 142, 0, 2162750, 142, 0, 2097215, 144, 268435456, 2162751, 144, 268435456)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Timer" type="Timer" parent="UI"]
wait_time = 60.0
autostart = true

[node name="Score" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SCORE : 0"

[node name="TimerLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButton" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_bottom = 31.0
grow_horizontal = 0
text = "PAUSE
"

[node name="Background" type="ColorRect" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.309804, 0.309804, 0.309804, 0.529412)

[node name="PauseMenu" type="ColorRect" parent="UI/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -166.5
offset_right = 144.0
offset_bottom = 166.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.419608, 0.419608, 0.419608, 1)
script = ExtResource("15_0qu2a")

[node name="Title" type="Label" parent="UI/Background/PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = 17.0
offset_right = 51.0
offset_bottom = 40.0
grow_horizontal = 2
text = "PAUSE MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Background/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -100.0
offset_right = 98.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="UI/Background/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="RestartButton" type="Button" parent="UI/Background/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="UI/Background/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "BACK TO MAIN MENU"

[node name="QuitButton" type="Button" parent="UI/Background/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="LastScore" type="Label" parent="UI/Background/PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0555556
anchor_top = 0.662162
anchor_right = 0.46875
anchor_bottom = 0.795736
grow_vertical = 0
text = "Last Score : 999"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HighScore" type="Label" parent="UI/Background/PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513889
anchor_top = 0.836336
anchor_right = 0.940972
anchor_bottom = 0.919369
grow_horizontal = 0
grow_vertical = 0
text = "High Score : 999"
metadata/_edit_use_anchors_ = true
